--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
     </div>
     <div class="redline"></div>
     <div class="mainv">
-      <div class="v"><img src="switch-controller.png" alt=""></div>
+      <div class="v"><img src="switch-controller.png" alt="">
+      </div>
       <div class="vv"><img src="switch-controller.png" alt=""></div>
       <div class="vvv"><img src="switch-controller.png" alt=""></div>
     </div>
